# KodaAI

./: .env.example  .gitignore  Modelfile  README.md  package-lock.json  package.json  pyproject.toml  start.bat
backend/: __init__.py  config.py  db.py  main.py
backend/github/: oauth.py  repos.py
backend/ollama/: __init__.py  client.py  models.py
backend/prompts/: __init__.py  store.py
backend/scanner/: __init__.py  agent.py  indexer.py  tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AgentTrace.tsx  FindingsPanel.tsx  ModelEmptyState.tsx  RepoPicker.tsx
frontend/src/pages/: Home.tsx  Pentests.tsx  Prompts.tsx  Scan.tsx
