[project]
name = "kodaai"
version = "0.1.0"
description = "Gemma 4 GitHub codebase analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "gitpython>=3.1.43",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.0",
    "pathspec>=0.12.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=2.1.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
